--- a/associations.yml
+++ b/associations.yml
@@ -1116,6 +1116,10 @@ L406:
   title: 'Plutarch -- Moralia XII: Concerning the Face Which Appears in the Orb of the Moon. On the Principle of Cold. Whether Fire or Water Is More Useful. Whether Land or Sea Animals Are Cleverer. Beasts Are Rational. On the Eating of Flesh'
   archive: http://www.archive.org/details/moraliainfifteen12plutuoft
   openlibrary: https://openlibrary.org/books/OL23320586M/Moralia_in_fifteen_volumes_with_an_English_translation_by_Frank_Cole_Babbitt.
+L418:
+  title: 'Pliny -- Natural History VIII: Books 28-32. Index of Fishes'
+  archive: http://archive.org/details/naturalhistory08plinuoft
+  openlibrary: 'https://openlibrary.org/books/ia:naturalhistory08plinuoft/Natural_history'
 L430:
   title: 'Lucian -- Lucian VI: How to Write History. The Dipsads. Saturnalia. Herodotus
     or Aetion. Zeuxis or Antiochus. A Slip of the Tongue in Greeting. Apology for
