--- a/associations.yml
+++ b/associations.yml
@@ -709,6 +709,10 @@ L183:
     of the Athenians'
   archive: http://www.archive.org/details/scriptaminorawit00xenouoft
   openlibrary: https://openlibrary.org/books/OL23331600M/Scripta_minora_with_an_English_translation_by_E.C._Marchant
+L184:
+  title: 'Diogenes Laertius -- Lives of Eminent Philosophers I: Books 1-5'
+  archive: https://archive.org/details/DiogenesLaertius01LivesOfEminentPhilosophers15_201412
+  openlibrary: https://openlibrary.org/books/OL7693982M/Diogenes_Laertius
 L185:
   title: 'Diogenes Laertius -- Lives of Eminent Philosophers II: Books 6-10'
   archive: http://www.archive.org/details/livesofeminentph02dioguoft
