--- a/associations.yml
+++ b/associations.yml
@@ -656,6 +656,10 @@ L157:
   title: 'Julian -- Julian III: Letters. Epigrams. Against the Galilaeans. Fragments'
   archive: http://www.archive.org/details/workswithenglish03juliuoft
   openlibrary: https://openlibrary.org/books/OL7026500M/Works.
+L159:
+  title: 'Polybius -- Histories IV: Books 9-15'
+L160:
+  title: 'Polybius -- Histories V: Books 16-27'
 L161:
   title: 'Polybius -- Histories VI: Books 28-39'
   archive: http://www.archive.org/details/historieswitheng06poly
