--- a/associations.yml
+++ b/associations.yml
@@ -1035,10 +1035,16 @@ L353:
   title: 'Pliny -- Natural History III: Books 8-11'
   archive: http://www.archive.org/details/plinynaturalhist005560mbp
   openlibrary: https://openlibrary.org/books/ia:plinynaturalhist005560mbp/Pliny_Natural_History_Volume_III
+L354:
+  title: 'Nonnos -- Dionysiaca Volume II: Books 16-35'
+  archive: https://archive.org/details/L354NonnosDiobysiaca111635
 L355:
   title: 'Livy -- Livy VI: Books 23-25'
   archive: http://www.archive.org/details/livywithenglisht06livyuoft
   openlibrary: https://openlibrary.org/books/OL23315794M/Livy
+L356:
+  title: 'Nonnos -- Dionysiaca Volume III: Books 36-48'
+  archive: https://archive.org/details/L356NonnosDionysiacaIII3648
 L358:
   title: 'Dio Chrysostom -- Dio Chrysostom III: Discourses 31-36'
   archive: http://www.archive.org/details/diochrysostomwit03diocuoft
