--- a/associations.yml
+++ b/associations.yml
@@ -949,6 +949,9 @@ L285:
   openlibrary: https://openlibrary.org/books/OL18074182M/The_Athenian_Constitution_The_Eudemian_ethics_On_virtues_and_vices
 L289:
   title: 'Philo -- Volume VI: On Abraham. On Joseph. On Moses'
+L296:
+  title: 'Sidonius -- Volume I: Poems. Letters, Books 1-2'
+  archive: https://archive.org/details/L296SidoniusI12PoemsLetters
 L300:
   title: 'Ammianus Marcellinus -- Roman History I: Books 14-19'
   archive: http://www.archive.org/details/ammianusmarcelli01ammiuoft
