Fix minor typo in associations.yml
Terence's The Eunuch is spelled with -uch.

--- a/associations.yml
+++ b/associations.yml
@@ -94,7 +94,7 @@ L021:
   title: 'Sophocles -- Sophocles II: Ajax. Electra. Trachiniae. Philoctetes.'
   google: http://books.google.com/books?id=JKYNAAAAIAAJ
 L022N:
-  title: 'Terence -- Terence I: The Lady of Andeos. The Self-Tormentor. The Eunich'
+  title: 'Terence -- Terence I: The Lady of Andeos. The Self-Tormentor. The Eunuch'
   google: http://books.google.com/books?id=0BsMAAAAIAAJ
 L023N:
   title: 'Terence -- Terence II: Phormio. The Mother-in-Law. The Brothers'
